# AI-Business--Copilot

./: .dockerignore  .gitignore  AI_Business_Copilot_Description.docx  AI_Copilot_Interview_Walkthrough.docx  AI_Copilot_Setup_Journal.docx  AI_Project_GoTo_Guide.docx  Dashboard_Feature_Guide.docx  README.md  main.py  pyproject.toml  requirements.txt
Backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  test_run.py
Backend/agents/: analyst_agent.py  research_agent.py  response_agent.py  router_agent.py  strategy_agent.py
Backend/faiss_index/: index.faiss
Backend/rag/: query_expander.py
Backend/tests/: conftest.py  test_analyst.py  test_api.py  test_dashboard.py  test_data_extractor.py  test_rag.py  test_research.py  test_response.py  test_router.py  test_strategy.py  test_summary.py  test_workflow.py
Backend/workflows/: state.py
Frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/(dashboard)/: layout.tsx
Frontend/components/auth/: google-login-button.tsx  logout-button.tsx
Frontend/components/chat/: DashboardRenderer.tsx  chat-input.tsx  chat-message.tsx  chat-sidebar.tsx  (+2 more)
Frontend/contexts/: auth-context.tsx
Frontend/hooks/: useAuth.ts  useChat.ts  useDocuments.ts
Frontend/lib/: api.ts  supabase-middleware.ts  supabase.ts  types.ts
Reports/: AI_Business_Copilot_Report.docx
agents/: dashboard_agent.py  data_extractor_agent.py  summary_agent.py
app/: main.py
rag/: reranker.py  retriever.py  vector_store.py
workflows/: langgraph_flow.py
(+8 files in other folders)
